# be-form-pilates

./: .env.example  Cargo.toml
.github/workflows/: deploy.yml
migrations/: 20260622000001_enable_pgcrypto.down.sql  20260622000002_create_users_and_auth.down.sql  20260622000002_create_users_and_auth.up.sql  20260622000003_create_catalog.down.sql  20260622000003_create_catalog.up.sql  20260622000004_create_packages_and_integrations.down.sql  20260622000004_create_packages_and_integrations.up.sql  20260622000005_create_class_sessions.down.sql  20260622000005_create_class_sessions.up.sql  20260622000006_create_credits_and_bookings.down.sql  20260622000006_create_credits_and_bookings.up.sql  20260622000007_seed_catalog.down.sql  20260622000007_seed_catalog.up.sql  20260622000008_seed_app_user.down.sql  20260622000008_seed_app_user.up.sql  20260622000009_seed_sample_data.down.sql  20260622000009_seed_sample_data.up.sql  20260622000010_credit_lot_branch.down.sql  20260622000010_credit_lot_branch.up.sql
src/: auth.rs  catalog.rs  domain.rs  email.rs  error.rs  main.rs  middleware.rs  request_id.rs
src/admin/: handlers.rs  mod.rs
src/booking/: handlers.rs  mod.rs  queries.rs  service.rs
src/integration/: haravan.rs  haravan_sync.rs  mod.rs
src/student/: handlers.rs  mod.rs
src/trainer/: handlers.rs  mod.rs
