[package]
name = "form-pilates"
version = "0.1.0"
edition = "2024"
default-run = "form-pilates"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "migrate",
    "postgres",
    "uuid",
    "chrono",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"
hmac = "0.12"
base64 = "0.22"
serde_urlencoded = "0.7"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
lettre = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }

[[bin]]
name = "gen_hash"
path = "src/bin/gen_hash.rs"
